--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,12 @@
 {
   "env": {
     "browser": true,
-    "es6": true
+    "es6": true,
+    "node": true
   },
 
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 7,
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true,
@@ -20,8 +21,9 @@
   
   "extends": "eslint:recommended",
   "rules": {
-    "indent": [2, 2],
+    "indent": [2, 4],
     "quotes": [2, "single"],
-    "semi": [2, "always"]
+    "semi": [2, "always"],
+    "no-console": 0
   }
 }
